fix styles on mobile for container (#2364)

--- a/base/styles/globals.css
+++ b/base/styles/globals.css
@@ -1,5 +1,6 @@
 :root {
   --max-width: 1100px;
+  --background-rgb: 42, 42, 42;
 }
 
 @media (prefers-color-scheme: dark) {
